--- a/assignments/notebooks/Homework1_Problem5_STUDENT.ipynb
+++ b/assignments/notebooks/Homework1_Problem5_STUDENT.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Introduction to Using Python for Quantum Mechanics Problems\n",
     "\n",
-    "Python is a powerful and flexible programming language that can be used to solve many kinds of scientific problems. The wide variety of modules and libraries that are available for Python have specific uses for particular kinds of problems. In this notebook, you will learn to use the `numpy` module and the asociated `linalg` library to do common linear algebra manipulations that readily appear in quantum mechanics problems. In so doing, you will solve homework problems 1 and 2 again, but this time using Python. The idea is that while these homework problems are analytically tractable and not terrible cumbersome, other problems you might encounter will not be and using something like `numpy.linalg` will be very useful."
+    "Python is a powerful and flexible programming language that can be used to solve many kinds of scientific problems. The wide variety of modules and libraries that are available for Python have specific uses for particular kinds of problems. In this notebook, you will learn to use the `numpy` module and the associated `linalg` library to do common linear algebra manipulations that readily appear in quantum mechanics problems. In so doing, you will solve homework problem 1 again, but this time using Python. The idea is that while most of the homework problems you work are analytically tractable and not terribly cumbersome, other problems you might encounter will not be and using something like `numpy.linalg` will be very useful."
    ]
   },
   {
