fixed typo with PDF

--- a/assignments/homework1.tex
+++ b/assignments/homework1.tex
@@ -103,12 +103,12 @@ spin down (\(\ket{-}\)).
   What are we assuming about particles in the beam when we do this?
 \item
   Write the normalized state vector from part 3 using the linear algebra
-  representation. That is, using \(\ket{+} \doteq \begin{bmatrix} 1 \cr 0 \end{bmatrix}\) and \(\ket{-} \doteq \begin{bmatrix} 0 \cr 1\end{bmatrix}\).
+  representation. That is, using $\ket{+} \doteq \begin{bmatrix} 1 \cr 0 \end{bmatrix}$ and \(\ket{-} \doteq \begin{bmatrix} 0 \cr 1\end{bmatrix}\).
 \item
-  Using the spin matrix for \(S\_z \doteq \dfrac{\hbar}{2}\begin{bmatrix} 1 & 0 \cr 0 & -1 \end{bmatrix}\), calculate the expectation value, \(\braket{S_z}\). How does you
+  Using the spin matrix for $S\_z \doteq \dfrac{\hbar}{2}\begin{bmatrix} 1 & 0 \cr 0 & -1 \end{bmatrix}$, calculate the expectation value, \(\braket{S_z}\). How does you
   answer compare to part 2?
 \item
-  Now let's use the \(S_x\) spin matrix, \(S\_x \doteq \dfrac{\hbar}{2}\begin{bmatrix} 0 & 1 \cr 1 & 0 \end{bmatrix}\), to calculate the expectation value, \(\braket{S_x}\). What does
+  Now let's use the \(S_x\) spin matrix, $S\_x \doteq \dfrac{\hbar}{2}\begin{bmatrix} 0 & 1 \cr 1 & 0 \end{bmatrix}$, to calculate the expectation value, \(\braket{S_x}\). What does
   the sign of this expectation value tell you about the relative
   probabilities of the x-component of the spin angular momentum? That
   is, how do \(P_{+x}\) and \(P_{-x}\) compare?
@@ -230,7 +230,7 @@ particle is placed in is given by
   state vector is not aligned to the magnetic field. We first need to
   write \(\ket{\psi(0)}\) in the usual \(\ket{+}, \ket{-}\) basis. In
   general,
-  \(\ket{n}_+ = \cos\frac{\theta}{2}\ket{+} + e^{i\phi}\sin\frac{\theta}{2}\ket{-}\).
+  \(\ket{+}_n = \cos\frac{\theta}{2}\ket{+} + e^{i\phi}\sin\frac{\theta}{2}\ket{-}\).
   Sketch the initial state vector in 3D space and determine \(\theta\)
   and \(\phi\). Write down \(\ket{\psi(0)}\) in the usual
   \(\ket{+}, \ket{-}\) basis.
@@ -243,9 +243,9 @@ particle is placed in is given by
   terms (with \(\pm \hbar \omega/2\)). (Recall: finding the state in the
   energy basis of the problem makes it easy for us to use this
   expansion.). In general, the energy basis states are given by:
-  \[\ket{+}_{n'} = \cos\frac{\theta}{2}\ket{+} + e^{i\phi}\sin\frac{\theta}{2}\ket{-}\]
+  \(\ket{+}_{n'} = \cos\frac{\theta}{2}\ket{+} + e^{i\phi}\sin\frac{\theta}{2}\ket{-}\)
   and
-  \[\ket{-}_{n'} = \cos\frac{\theta}{2}\ket{+} - e^{i\phi}\sin\frac{\theta}{2}\ket{-}\]
+  \(\ket{-}_{n'} = \sin\frac{\theta}{2}\ket{+} - e^{i\phi}\cos\frac{\theta}{2}\ket{-}\)
   where \(\hat{n}' = (\hat{x}+\hat{z})/\sqrt{2}\). Sketch the magnetic
   field field vector in 3D space and determine \(\theta\) and \(\phi\).
   Write down \(\ket{\psi(0)}\) in the \(\ket{+}_{n'}, \ket{-}_{n'}\)
