--- a/assignments/homework2.tex
+++ b/assignments/homework2.tex
@@ -65,6 +65,8 @@
 \begin{document}
 \maketitle
 
+\href{./homework2.pdf}{{[}PDF{]}}
+
 Homework 2 focuses on the position representation of the state vector
 and the infinite square well. It is a little shorter because we have a
 take home quiz this week.
@@ -119,7 +121,8 @@ momentum, and probabilities or expectation values of making
 measurements. So, while the wavefunction is incredibly useful, its
 physical meaning comes from using it to determine observables.
 
-Let's go back to the form of the wavefunction determined in McIntyre:
+Let's go back to the form of the wavefunction determined in McIntyre
+(with well boundaries, \([0,L]\) ):
 \(\phi_n(x) = \sqrt{\dfrac{2}{L}} \sin \dfrac{n\pi x}{L}\) for
 \(n = 1,2,3,\dots\)
 
