--- a/assignments/homework2.tex
+++ b/assignments/homework2.tex
@@ -65,7 +65,6 @@
 \begin{document}
 \maketitle
 
-\href{./homework2.pdf}{{[}PDF{]}}
 
 Homework 2 focuses on the position representation of the state vector
 and the infinite square well. It is a little shorter because we have a
@@ -89,7 +88,7 @@ energy eigenstates, in the position representation, are
   Consider changing the boundaries from {[}0, \(L\){]} to {[}\(-L\),
   \(L\){]}. The potential remains the same, but the well width has been
   expanded. Without performing a calculation, determine the new energy
-  eigenstates. Explain how you determined them and discuss whether the
+  eigenvalues. Explain how you determined them and discuss whether the
   states are more or less energetic than the original system.
 \item
   Given the change in the symmetry of the well, what functional
