fixed first problem

--- a/assignments/homework2.tex
+++ b/assignments/homework2.tex
@@ -65,7 +65,6 @@
 \begin{document}
 \maketitle
 
-
 Homework 2 focuses on the position representation of the state vector
 and the infinite square well. It is a little shorter because we have a
 take home quiz this week.
@@ -93,14 +92,15 @@ energy eigenstates, in the position representation, are
 \item
   Given the change in the symmetry of the well, what functional
   dependence do you now expect for the position representation of the
-  state vector? That is, what form should \(\phi_n\) take now? Explain
+  state vector? That is, does a pure \(\sin\) function still work? Based
+  on what we did in class, what form should \(\phi_n\) take now? Explain
   why this choice makes sense.
 \item
   Write down the full form of the position representation of the state
   vector. That is, what precisely is \(\phi_n(x)\)? Leave no
   undetermined coefficients and make sure it is normalized. You should
   not have to solve the infinite square well problem to determine this,
-  but use symmetry arguments.
+  but use symmetry arguments and boundary conditions.
 \item
   Check that you answer to part 1 and part 3 make sense by using the
   eigenvalue equation
@@ -114,7 +114,7 @@ energy eigenstates, in the position representation, are
 One of the things that is really frustrating about quantum mechanics is
 determining what physical meaning different things have. For example, if
 I were asked: what is the physical meaning of the wavefunction? I would
-likely answer: ??? Because the physical meaning in
+likely answer: ¯\textbackslash\_(ツ)\_/¯ Because the physical meaning in
 quantum mechanics stems from observables. Things like: energy, position,
 momentum, and probabilities or expectation values of making
 measurements. So, while the wavefunction is incredibly useful, its
